--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- aos  -->
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+      <!-- font  -->
+      <style>
+       @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+</style>
     <title>Bangladesh Defence Portal</title>
   </head>
   <body>
